--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,6 +5,9 @@ build-backend = "hatchling.build"
 [project]
 name = "py-win32more"
 version = "0.4.0"
+dependencies = [
+    "typing_extensions; python_version < '3.9'",
+]
 
 [tool.hatch.build]
 only-include = ["win32more"]
@@ -23,6 +26,29 @@ typing = "mypy {args}"
 fmt = [
     "black {args}",
     "ruff --fix {args}",
+]
+
+[tool.hatch.envs.all]
+template = "all"   # disable inherit default
+dependencies = [
+    "pytest",
+]
+
+[tool.hatch.envs.all.scripts]
+test = "pytest {args:tests}"
+
+[[tool.hatch.envs.all.matrix]]
+python = [
+    "3.11-64",
+    "3.11-32",
+    "3.10-64",
+    "3.10-32",
+    "3.9-64",
+    "3.9-32",
+    "3.8-64",
+    "3.8-32",
+    "3.7-64",
+    "3.7-32",
 ]
 
 [tool.black]
