--- a/pyproject.toml
+++ b/pyproject.toml
@@ -31,7 +31,7 @@ classifiers = [
 Homepage = "https://github.com/ynkdir/py-win32more"
 
 [tool.hatch.build]
-only-include = ["win32more", "win32generator"]
+only-include = ["win32more"]
 
 [tool.hatch.envs.default]
 dependencies = [
