--- a/.github/workflows/run_tests.yml
+++ b/.github/workflows/run_tests.yml
@@ -31,5 +31,29 @@ jobs:
       run: pip install --upgrade --upgrade-strategy eager .
 
     - name: Run tests
-      run: |
-        python -m unittest discover -s tests
+      run: python -m unittest discover -s tests
+
+  run-tests-cygwin:
+    name: "Test Cygwin"
+    runs-on: windows-latest
+
+    # Use cygwin bash
+    # From: https://github.com/marketplace/actions/install-cygwin#line-terminators
+    defaults:
+      run:
+        shell: C:\tools\cygwin\bin\bash.exe --login -o igncr '{0}'
+
+    steps:
+    - name: Checkout code
+      uses: actions/checkout@v4
+
+    - name: Set up Cygwin
+      uses: egor-tensin/setup-cygwin@v4
+      with:
+        packages: python3
+
+    - name: Install Python requirements
+      run: pip3 install --upgrade --upgrade-strategy eager $(cygpath --absolute $GITHUB_WORKSPACE)
+
+    - name: Run tests
+      run: python -m unittest discover -s $(cygpath --absolute "${GITHUB_WORKSPACE}/tests")
