--- a/.github/workflows/update_sdk.yml
+++ b/.github/workflows/update_sdk.yml
@@ -37,6 +37,9 @@ jobs:
             json_file_name: "WindowsSDK.json"
 
     steps:
+    - uses: GitHubSecurityLab/actions-permissions/monitor@v1
+      with:
+        config: ${{ vars.PERMISSIONS_CONFIG }}
     - name: Checkout win32more code
       uses: actions/checkout@v4
       with:
