--- a/.github/workflows/update_sdk.yml
+++ b/.github/workflows/update_sdk.yml
@@ -9,6 +9,8 @@ jobs:
   update-sdk:
     name: "Update ${{ matrix.sdk.commit_message }}"
     runs-on: windows-latest
+    permissions:
+      contents: write
 
     strategy:
       matrix:
@@ -37,9 +39,6 @@ jobs:
             json_file_name: "WindowsSDK.json"
 
     steps:
-    - uses: GitHubSecurityLab/actions-permissions/monitor@v1
-      with:
-        config: ${{ vars.PERMISSIONS_CONFIG }}
     - name: Checkout win32more code
       uses: actions/checkout@v4
       with:
