--- a/.github/workflows/update_sdk.yml
+++ b/.github/workflows/update_sdk.yml
@@ -9,6 +9,8 @@ jobs:
   update-sdk:
     name: "Update ${{ matrix.sdk.commit_message }}"
     runs-on: windows-latest
+    permissions:
+      contents: write
 
     strategy:
       matrix:
