--- a/.github/workflows/update_sdk.yml
+++ b/.github/workflows/update_sdk.yml
@@ -9,6 +9,9 @@ jobs:
   update-sdk:
     name: "Update ${{ matrix.sdk.commit_message }}"
     runs-on: windows-latest
+    permissions:
+      contents: write
+      pull-requests: write
 
     strategy:
       matrix:
@@ -37,6 +40,9 @@ jobs:
             json_file_name: "WindowsSDK.json"
 
     steps:
+    - name: git config
+      run: git config --global core.autocrlf false
+
     - name: Checkout win32more code
       uses: actions/checkout@v4
       with:
