--- a/.github/workflows/run_tests.yml
+++ b/.github/workflows/run_tests.yml
@@ -40,6 +40,9 @@ jobs:
         python-version: ${{ matrix.python-version }}
         architecture: ${{ matrix.architecture }}
 
+    - name: Version check
+      run: python -VV
+
     - name: Install Python requirements
       run: pip install --upgrade --upgrade-strategy eager .
 
@@ -64,6 +67,9 @@ jobs:
       uses: egor-tensin/setup-cygwin@v4
       with:
         packages: python3
+
+    - name: Version check
+      run: python -VV
 
     - name: Install Python requirements
       run: pip3 install --upgrade --upgrade-strategy eager $(cygpath --absolute $GITHUB_WORKSPACE)
