--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,3 @@
-[build-system]
-requires = ["hatchling"]
-build-backend = "hatchling.build"
-
 [project]
 name = "win32more"
 version = "0.5.12"
@@ -31,8 +27,9 @@ classifiers = [
 [project.urls]
 Homepage = "https://github.com/ynkdir/py-win32more"
 
-[tool.hatch.build]
-only-include = ["win32more"]
+[build-system]
+requires = ["uv_build>=0.8.14,<0.9.0"]
+build-backend = "uv_build"
 
 [tool.ruff]
 line-length = 120
