--- a/.github/workflows/run_tests.yml
+++ b/.github/workflows/run_tests.yml
@@ -41,9 +41,7 @@ jobs:
         architecture: ${{ matrix.architecture }}
 
     - name: Install Python requirements
-      # run: pip install --upgrade --upgrade-strategy eager .
-      # for test
-      run: pip install --upgrade --upgrade-strategy eager --extra-index-url https://test.pypi.org/simple/ .
+      run: pip install --upgrade --upgrade-strategy eager .
 
     - name: Run tests
       run: python -m unittest discover -s tests
@@ -68,9 +66,7 @@ jobs:
         packages: python3
 
     - name: Install Python requirements
-      # run: pip3 install --upgrade --upgrade-strategy eager $(cygpath --absolute $GITHUB_WORKSPACE)
-      # for test
-      run: pip3 install --upgrade --upgrade-strategy eager --extra-index-url https://test.pypi.org/simple/ $(cygpath --absolute $GITHUB_WORKSPACE)
+      run: pip3 install --upgrade --upgrade-strategy eager $(cygpath --absolute $GITHUB_WORKSPACE)
 
     - name: Run tests
       run: python -m unittest discover -s $(cygpath --absolute "${GITHUB_WORKSPACE}/tests")
