--- a/.github/workflows/run_tests.yml
+++ b/.github/workflows/run_tests.yml
@@ -14,7 +14,7 @@ jobs:
     strategy:
       matrix:
         os: ["windows-latest", "windows-11-arm"]
-        python-version: ["3.9", "3.10", "3.11", "3.12", "3.13", "3.14-dev"]
+        python-version: ["3.9", "3.10", "3.11", "3.12", "3.13", "3.14"]
         architecture: ["x64", "x86", "arm64"]
         exclude:
           - os: "windows-latest"
