--- a/.github/workflows/update_sdk.yml
+++ b/.github/workflows/update_sdk.yml
@@ -19,18 +19,23 @@ jobs:
           - name: "Microsoft.WindowsAppSDK"
             min_version: "1.5"
             allow_prerelease: false
+            exclude:
           - name: "Microsoft.Web.WebView2"
             min_version: "1.0.2651"
             allow_prerelease: false
+            exclude:
           - name: "Microsoft.Windows.SDK.Win32Metadata"
             min_version: "63.0"
             allow_prerelease: true
+            exclude: "66.0.3-preview"
           - name: "Microsoft.Windows.SDK.Contracts"
             min_version: "10.0.26100.4948"
             allow_prerelease: false
+            exclude:
           - name: "Microsoft.Graphics.Win2D"
             min_version: "1.2.0"
             allow_prerelease: false
+            exclude:
 
     steps:
     - name: Setup .NET
@@ -59,6 +64,8 @@ jobs:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       working-directory: win32more
       run: |
+        $exclude = @({{ $matrix.sdk.exclude }})
+
         $name = "${{ matrix.sdk.name }}"
         $min_version = "${{ matrix.sdk.min_version }}"
         $allow_prerelease = $${{ matrix.sdk.allow_prerelease }}
@@ -68,6 +75,10 @@ jobs:
         $uri = "https://api.nuget.org/v3-flatcontainer/$($name.ToLower())/index.json"
         $response = Invoke-RestMethod -Uri $uri
         foreach ($version in $response.versions) {
+
+          if ($version -in $exclude) {
+            continue
+          }
 
           # Check new version
 
