--- a/.github/workflows/run_tests.yml
+++ b/.github/workflows/run_tests.yml
@@ -41,7 +41,7 @@ jobs:
         architecture: ${{ matrix.architecture }}
 
     - name: Install Python requirements
-      run: pip install --upgrade --upgrade-strategy eager .
+      run: pip install -r test_requirements.txt
 
     - name: Run tests
       run: python -m unittest discover -s tests
@@ -66,7 +66,7 @@ jobs:
         packages: python3
 
     - name: Install Python requirements
-      run: pip3 install --upgrade --upgrade-strategy eager $(cygpath --absolute $GITHUB_WORKSPACE)
+      run: pip3 install -r test_requirements.txt
 
     - name: Run tests
       run: python -m unittest discover -s $(cygpath --absolute "${GITHUB_WORKSPACE}/tests")
