--- a/.github/workflows/run_tests.yml
+++ b/.github/workflows/run_tests.yml
@@ -54,7 +54,7 @@ jobs:
     # From: https://github.com/marketplace/actions/install-cygwin#line-terminators
     defaults:
       run:
-        shell: C:\tools\cygwin\bin\bash.exe --login -o igncr '{0}'
+        shell: C:\tools\cygwin\bin\bash.exe -o igncr '{0}'
 
     steps:
     - name: Checkout code
