--- a/.github/workflows/run_tests.yml
+++ b/.github/workflows/run_tests.yml
@@ -69,4 +69,4 @@ jobs:
       run: pip3 install -r test_requirements.txt
 
     - name: Run tests
-      run: python -m unittest discover -s $(cygpath --absolute "${GITHUB_WORKSPACE}/tests")
+      run: python -m unittest discover -s tests
