--- a/.github/workflows/run_tests.yml
+++ b/.github/workflows/run_tests.yml
@@ -59,7 +59,7 @@ jobs:
       uses: actions/checkout@v5
 
     - name: Set up Cygwin
-      uses: cygwin/cygwin-install-action@6
+      uses: cygwin/cygwin-install-action@v6
       with:
         packages: python3
 
