--- a/.github/workflows/run_tests.yml
+++ b/.github/workflows/run_tests.yml
@@ -41,7 +41,7 @@ jobs:
         architecture: ${{ matrix.architecture }}
 
     - name: Install Python requirements
-      run: pip install --upgrade --upgrade-strategy eager .
+      run: pip install -r test_requirements.txt
 
     - name: Run tests
       run: python -m unittest discover -s tests
@@ -50,23 +50,21 @@ jobs:
     name: "Test Cygwin"
     runs-on: windows-latest
 
-    # Use cygwin bash
-    # From: https://github.com/marketplace/actions/install-cygwin#line-terminators
     defaults:
       run:
-        shell: C:\tools\cygwin\bin\bash.exe --login -o igncr '{0}'
+        shell: D:\cygwin\bin\bash.exe -o igncr '{0}'
 
     steps:
     - name: Checkout code
       uses: actions/checkout@v5
 
     - name: Set up Cygwin
-      uses: egor-tensin/setup-cygwin@v4
+      uses: cygwin/cygwin-install-action@v6
       with:
         packages: python3
 
     - name: Install Python requirements
-      run: pip3 install --upgrade --upgrade-strategy eager $(cygpath --absolute $GITHUB_WORKSPACE)
+      run: pip3 install -r test_requirements.txt
 
     - name: Run tests
-      run: python -m unittest discover -s $(cygpath --absolute "${GITHUB_WORKSPACE}/tests")
+      run: python -m unittest discover -s tests
