--- a/packages/Microsoft.Graphics.Win2D.1.3.0/pyproject.toml
+++ b/packages/Microsoft.Graphics.Win2D.1.3.0/pyproject.toml
@@ -1,7 +1,7 @@
 [project]
 name = "win32more-Microsoft.Graphics.Win2D"
 version = "0.6.1.3.0"
-dependencies = ["win32more==0.6.*", "win32more-Microsoft.WindowsAppSDK>=0.6.1.6.240923002,<0.7"]
+dependencies = ["win32more-core==0.6.*", "win32more-Microsoft.WindowsAppSDK>=0.6.1.6.240923002,<0.7"]
 
 [build-system]
 requires = ["hatchling >= 1.26"]
