--- a/packages/Microsoft.WindowsAppSDK.1.5.241107002/pyproject.toml
+++ b/packages/Microsoft.WindowsAppSDK.1.5.241107002/pyproject.toml
@@ -1,7 +1,7 @@
 [project]
 name = "win32more-Microsoft.WindowsAppSDK"
 version = "0.6.1.5.241107002"
-dependencies = ["win32more==0.6.*"]
+dependencies = ["win32more-core==0.6.*"]
 
 [build-system]
 requires = ["hatchling >= 1.26"]
