--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,8 @@ authors = [
     { name = "Yukihiro Nakadaira", email = "yukihiro.nakadaira@gmail.com" },
 ]
 dependencies = [
+    "win32more-core == 0.6.*",
+    "win32more-appsdk == 0.6.*",
     "win32more-Microsoft.Windows.SDK.Win32Metadata == 0.6.*",
     "win32more-Microsoft.Windows.SDK.Contracts == 0.6.*",
     "win32more-Microsoft.WindowsAppSDK == 0.6.*",
@@ -36,6 +38,9 @@ build-backend = "hatchling.build"
 
 [tool.hatch.build.targets.sdist]
 only-include = ["src/win32more"]
+
+[tool.hatch.build.targets.wheel]
+packages = ["src/win32more"]
 
 [tool.ruff]
 line-length = 120
